--- a/html/execs.html
+++ b/html/execs.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
     <script src='main.js'></script>
 </head>
 
@@ -15,23 +15,23 @@
     <!-- Navbar START -->
     <nav class="navbar navbar-expand-lg navbar-light nav-bg">
         <div class="container-fluid">
-            <img src="images/logo.svg" class="nav-logo">
+            <a class="navbar-brand" href="index.html"><img src="../images/logo.svg" class="nav-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="#">Events <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                <a class="nav-link" href="events.html">Events</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Revision Material</a>
+                <a class="nav-link" href="revision.html">Revision Material</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Exec</a>
+                <a class="nav-link" href="execs.html">The Execs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Sponsors</a>
+                    <a class="nav-link " href="sponsors.html">Sponsors</a>
                 </li>
             </ul>
             </div>
@@ -39,14 +39,7 @@
       </nav>
     <!-- Navbar END -->
 
-    <!-- Title page START -->
-      <div class="container-fluid title-container bg-primary">
-          <div class="welcome-title display-2 my-auto">
-              Warwick Physics Society
-          </div>
-      </div>
     
-    <!-- Title page END -->
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
